--- a/.eslintrc
+++ b/.eslintrc
@@ -51,6 +51,7 @@
         "prefer-const": "error",
         "prefer-destructuring": "error",
         "prefer-template": "error",
-        "rest-spread-spacing": "error"
+        "rest-spread-spacing": "error",
+        "comma-dangle": ["error", "always"]
     }
 }
