--- a/.eslintrc
+++ b/.eslintrc
@@ -31,17 +31,16 @@
         "no-shadow": "warn",
         "no-use-before-define": "warn",
         "max-len": ["error", { "code": 100 }],
-        "max-lines": ["error", 150],
+        "max-lines": ["error", 100],
         "complexity": ["error", 2],
-        "max-lines-per-function": ["error", 15],
+        "max-lines-per-function": ["error", 30],
         "max-nested-callbacks": ["error", 4],
         "max-params": ["error", 3],
         "max-statements": ["error", 8],
         "no-mixed-operators": "warn",
         "no-unneeded-ternary": "error",
         "sort-keys": ["error", "asc"],
-        "arrow-body-style": ["error", "always"],
-        "arrow-parens": ["error", "always"],
+        "space-before-blocks": ["error", "always"],
         "arrow-spacing": "error",
         "no-confusing-arrow": "error",
         "no-const-assign": "error",
@@ -53,4 +52,4 @@
         "rest-spread-spacing": "error",
         "comma-dangle": ["error", "always-multiline"]
     }
-}
+  }
